# inj_trace

./: LICENSE  PLAN.md  README.md  SETUP_NOTES.md  pyproject.toml
examples/: 01_field_grid_t89.py  02_run_ptm.py  03_animate.py
inj_trace/: __init__.py  config.py
inj_trace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
inj_trace/cli/: __init__.py  config_cmd.py  make_fields.py  plot.py  run_ptm.py
inj_trace/fields/: __init__.py  grid.py  models.py  writer.py
inj_trace/postprocess/: __init__.py  fluxmap.py  trajectories.py
inj_trace/runner/: __init__.py  executor.py  ptm_setup.py
inj_trace/visualization/: __init__.py  animation.py  equatorial.py  lshell.py  timeseries.py  trajectories3d.py
tests/: conftest.py  test_fields.py  test_ptm_driver.py  test_visualization.py
