[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inj_trace"
version = "0.1.0"
requires-python = ">=3.9"
description = "Wrapper and visualization tools for energetic electron injections to the inner magnetosphere using LANLGeoMag and SHIELDS-PTM"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "spacepy>=0.4",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
inj-config      = "inj_trace.cli.config_cmd:main"
inj-make-fields = "inj_trace.cli.make_fields:main"
inj-run         = "inj_trace.cli.run_ptm:main"
inj-plot        = "inj_trace.cli.plot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["inj_trace*"]
